refactor(dto): JDK25 特性收敛 —— DTO 转 record + 类型模式 switch + Sequenced Collections
- 不可变 DTO（请求/响应/视图）全部 @Data class → record：nook-auth/ai/pay/user/im
  校验注解迁到 record 分量，builder / 逐字段工厂改为规范构造器
  CreateCheckoutRequest 用 compact constructor 兜底 quantity 默认值
- AiChatService.chatStream：switch(event.getType()) 枚举分支 → switch(event) 类型模式匹配，
  消除 6 处 (XxxEvent) 强转
- Sequenced Collections：get(size-1)/get(0) → getLast()/getFirst()，倒序下标循环 → reversed()
- 保留 ConversationVO / MessageVO 为 Lombok（构造后跨实体逐字段回填，转 record 需重构装配）
- 实体类不动（MyBatis-Flex 需可变 + 无参构造）
- 同步 service / controller 访问器改名及受影响单测

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>